--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-# fuser = "0.10.0"
-fuser = { path = "../oss/fuser" }
+fuser = "0.10.0"
 libc = "0.2.117"
 tokio = { version = "1", features = ["full"] }
 nats = "0.18.1"
