--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,5 +1,8 @@
+version: '3'
+
 services:
-  image: nats
-  ports:
-  - 4222:4222
-  - 8222:8222
+  nats:
+    image: nats
+    ports:
+    - 4222:4222
+    - 8222:8222
