--- a/Cargo.toml
+++ b/Cargo.toml
@@ -8,6 +8,8 @@ edition = "2021"
 [dependencies]
 fuser = "0.10.0"
 libc = "0.2.117"
-nats = "0.18.1"
+async-nats = "0.34"
+tokio = { version = "1", features = ["full"] }
 structopt = "0.3"
 env_logger = "0.9"
+futures-util = "0.3"
